k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: last-ssh
  labels:
    app: last-ssh
spec:
  selector:
    app: last-ssh
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
